methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:33: error: not found: value droie
  if (cote==0) {droie()}
                ^