methods.picture.MethodsPicture.scala.code
override def run() {
  for (k<-1 to 3) {
    faireV(Color.YELLOW:Color,0:Int)
    gauche()
    avance(5:Int)
    droite()
   }
  gauche()
  for(k<-1 to 3) {
  	faireV(Color.GREEN:Color,1:Int)
  	droite()
  	avance(5:Int)
  	gauche()
  }
  
}

def Brosse() {
  baisseBrosse()
  leveBrosse()
}

def faireV(c:Color,cote:Int) {  //0=gauche, 1=droite
  for (k<-1 to 3) {
  avance()
  setCouleurBrosse(c:Color)
  Brosse()
  avance()
  if (cote==0) { gauche()}
  else {droite()}
  avance()
  Brosse()
  if (cote==0) {droie()}
  else {gauche()}
  avance()
  if (cote==0) {droite()}
  else {gauche()}
  avance()
  Brosse()
  if (cote==0) {gauche()}
  else {droite()}
  avance()
  avance()
  }
}





